KYAN-55 fix big right margin on mobile when using code tag in rte

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -26,6 +26,10 @@
   @extend .t-line-height--150;
   @extend .t-letter-spacing--default;
 
+  code {
+    word-break: break-word;
+  }
+
   strong {
     color: unset;
   }
